# nicebot

./: Cargo.toml  README.md  msrv.nix  shell.nix
benches/: nicebot.rs  singlebot.rs
src/: lib.rs  metabot.rs  nicebot.rs  singlebot.rs  trie.rs
test-data/: amazon.txt  archive.txt  bing.txt  chatgpt.txt  fsf.txt  lib.txt  linkedin.txt  oracle.txt  slack.txt  unsplash.txt  yandex.txt
tests/: nicebot.rs  samples.rs  singlebot.rs  trie.rs
