[package]
name = "nicebot"
version = "0.1.0"

description = "A fast and lean `robots.txt` parser"
keywords = ["parser", "parsing"]
categories = ["parser-implementations"]

license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/alexanderjkslfj/nicebot"

edition = "2024"
rust-version = "1.88"
include = ["src/*", "LICENSE", "README.md"]

[features]
default = ["full"]
full = [
    "meta",
    "percent-decoding",
    "async",
    "async-tokio",
    "async-async-std",
    "async-smol",
]
meta = ["dep:url"]
percent-decoding = ["dep:percent-encoding"]
async = ["dep:futures-lite", "dep:async-trait"]
async-tokio = ["async", "dep:tokio", "dep:tokio-util"]
async-async-std = ["async", "dep:async-std"]
async-smol = ["async", "dep:smol"]

[dependencies]
url = { version = "2", optional = true, default-features = false, features = [
    "std",
] }
percent-encoding = { version = "2", optional = true }
tokio = { version = "1", optional = true, default-features = false, features = [
    "io-util",
    "fs",
] }
tokio-util = { version = "0.7", optional = true, default-features = false, features = [
    "compat",
] }
async-std = { version = "1", optional = true, default-features = true }
smol = { version = "2", optional = true, default-features = false }
futures-lite = { version = "2", optional = true, default-features = false, features = [
    "std",
] }
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = [
    "io-util",
    "macros",
    "fs",
    "rt",
    "rt-multi-thread",
] }
criterion = { version = "0.6" }

[[test]]
name = "trie"
path = "tests/trie.rs"
[[test]]
name = "samples"
path = "tests/samples.rs"
[[test]]
name = "singlebot"
path = "tests/singlebot.rs"

[[bench]]
name = "singlebot"
harness = false
